<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">"低碳派"</string>
    <string name="copy_right">"Copyright @ 2018&#8211;2020 \n 低碳派 mylowcarbon.com 版权所有"</string>
    <string name="title_user_agreement">"低碳派注册协议"</string>
    <string name="user_agreement">"本服务条款是您与低碳派服务平台(包含)的所有者---科技有限公司及其关联公司之间就XXX所订立的合约或合同.请您仔细阅读本条款,仔细阅读本条款,仔细阅读本条款,仔细阅读本条款,仔细阅读本条款,仔细阅读本条款,仔细阅读本条款,仔细阅读本条款,"</string>
    <string name="text_do_not_agree">"不同意"</string>
    <string name="text_agree">"同意"</string>
    <string name="hint_account">"手机号码"</string>
    <string name="hint_password">"登录密码"</string>
    <string name="hint_verify_code">"图形验证码"</string>
    <string name="text_login">"登录"</string>
    <string name="text_chinese">"中国大陆"</string>
    <string name="text_register">"注册新账户"</string>
    <string name="text_forget_password">"忘记密码?"</string>
    <string name="text_ok">"好"</string>
    <string name="text_cancel">"取消"</string>
    <string name="text_skip">"跳过"</string>
    <string name="text_region">"中国大陆"</string>
    <string name="text_reg">注册</string>
    <string name="hint_phone_number">"你的11位手机号码"</string>
    <string name="text_reg_protocol">"注册即代码同意"</string>
    <string name="text_app_protocol">"低碳派注册协议"</string>
    <string name="text_input_verify_code">"输入验证码"</string>
    <string name="text_verify_code_tips"><Data><![CDATA[  我们已向 <font color="#D4AF72">%1s</font> 发送验证码短信,请查看短信并输入验证。]]></Data></string>
    <string name="text_verify_code_tips1">我们已向
        <b>
            <font fgcolor="#FF0000">
                <xliff:g example="123456789" id="phone_number">%s</xliff:g>
            </font>
        </b>
        发送验证码短信,请查看短信并输入验证</string>
    <string name="text_verify_code_count_down">"接收短信大约需要45秒"</string>
    <string name="text_set_password">"设置密码"</string>
    <string name="text_your_phone_number">"你的手机号码"</string>
    <string name="text_password_introduction">"登录密码,交易密码为6&#8211;12位,不能全是数字"</string>
    <string name="hint_input_login_password">"输入登录密码"</string>
    <string name="hint_input_deal_password">"输入交易密码"</string>
    <string name="hint_recommend_code">"输入推荐码,可不填"</string>
    <string name="text_save">"保存"</string>
    <string name="text_find_password">"找回密码"</string>
    <string name="text_input_account_find_password">"请填写您要找回密码的账号"</string>
    <string name="hint_input_account">"输入你的账号"</string>
    <string name="text_find_password_by_question">"通过密保找回"</string>
    <string name="text_next">"下一步"</string>
    <string name="text_previous">"上一步"</string>
    <string name="text_find_password_summary">"你还可以通过已绑定的邮箱,向邮箱发送重置密码申请\n我们重置好密码后,会发送通知到该邮箱"</string>
    <string name="text_question">"密保问题"</string>
    <string name="hint_input_answer">"输入答案"</string>
    <string name="text_input_question_answer">"输入答案"</string>
    <string name="text_input_answer_tips">"请回答已设置的密保进行验证"</string>
    <string name="text_find_password_by_account">"通过手机号找回"</string>
    <string name="text_verify_question">"密保问题"</string>
    <string name="text_answer">"答案"</string>
    <string name="hint_answer">"请输入答案"</string>
    <string name="text_question_summary">"密保问题，可用于找回登录密码，或查看交易密码"</string>
    <string name="title_set_new_password">"设置新密码"</string>
    <string name="text_save_new_password">"保存新密码"</string>
    <string name="text_set_new_password">"请为您的账号 %1s设置一个新密码"</string>
    <string name="hint_input_new_password">"输入新密码"</string>
    <string name="hint_confirm_new_password">"确认新密码"</string>
    <string name="text_gender">"性别"</string>
    <string name="text_male">"男生"</string>
    <string name="text_female">"女生"</string>
    <string name="text_height">"身高"</string>
    <string name="text_weight">"体重"</string>
    <string name="format_height">"我的身高%1dCm"</string>
    <string name="format_weight">"我的体重%1dKg"</string>
    <string name="title_weight">@string/text_weight</string>
    <string name="text_verify_identity">"验证身份"</string>
    <string name="text_transaction_password">"交易密码"</string>
    <string-array name="tab_titles">
        <item> 运动挖矿 </item>
        <item> 交易中心 </item>
        
        
        <item> 我的 </item>
    </string-array>
    <string-array name="tab_mine">
        <item> 步行 </item>
        <item> 骑行 </item>
    </string-array>
    <string-array name="tab_recommend">
        <item> 我的推荐 </item>
        <item> 推荐排名 </item>
    </string-array>
    <string-array name="tab_my_trade">
        <item> 卖出 </item>
        <item> 买入 </item>
        <item> 已完成 </item>
    </string-array>
    <string-array name="sp_bank_type">
        <item> 请选择卡类型 </item>
        <item> 储蓄卡 </item>
        <item> 信用卡 </item>
    </string-array>
    <string-array name="sp_question">
        <item> 自己之前设置的密保问题1 </item>
        <item> 自己之前设置的密保问题2 </item>
        <item> 自己之前设置的密保问题3 </item>
        <item> 自己之前设置的密保问题4 </item>
        <item> 自己之前设置的密保问题5 </item>
        <item> 自己之前设置的密保问题6 </item>
    </string-array>
    <string name="not_support_ble">设备不支持蓝牙4.0</string>
    <string name="exchange_lcl">兑换\n LCL</string>
    <string name="action_settings">Settings</string>
    <string name="connect_status_index">连接状态：</string>
    <string name="connected">已连接</string>
    <string name="disconnect">未连接</string>
    <string name="rssi_tv">线损值：</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="steps">步数:</string>
    <string name="distance">距离:</string>
    <string name="calorie">卡路里</string>
    <string name="sleep">睡眠:</string>
    <string name="deep">深睡:</string>
    <string name="light">浅睡:</string>
    <string name="awake">清醒:</string>
    <string name="sync_step">计步同步</string>
    <string name="sync_sleep">睡眠同步</string>
    <string name="scan">扫描</string>
    <string name="about_update_app">应用升级</string>
    <string name="read_ble_version">获取蓝牙版本</string>
    <string name="read_ble_version_first">请先获取蓝牙版本，再进行固件升级</string>
    <string name="read_step_sleep_status">获取计步和睡眠状态</string>
    <string name="read_ble_battery">获取设备电量</string>
    <string name="set_ble_time">设置时间</string>
    <string name="update_ble">固件升级</string>
    <string name="et_height_hint">cm</string>
    <string name="et_weight_hint">kg</string>
    <string name="pull_down_scan_equipment"> 下拉扫描设备 </string>
    <string name="bracelet_setting">手环设置 </string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="zero_count">0 次</string>
    <string name="count">次</string>
    <string name="zero_hour_zero_minute">0 时  0 分</string>
    <string name="kilocalorie">千卡</string>
    <string name="kilometers">千米</string>
    <string name="zero_kilometers">0 千米</string>
    <string name="zero_kilocalorie">0 千卡</string>
    <string name="search_device">搜索设备</string>
    <string name="yc_connect_success">连接成功</string>
    <string name="yc_connect_faile">连接失败</string>
    <string name="yc_connect">已连接</string>
    <string name="yc_unconnect">未连接</string>
    <string name="unknown_device">未知设备</string>
    <string name="YC_Dolen_connecting">连接中...</string>
    <string name="YC_Dolen_connect_start">开始连接</string>
    <string name="someone_connecting">已有设备正在连接,请稍后...</string>
    <string name="bg_connecting">设备正在连接,请稍后...</string>
    <string name="YC_Dolen_disconnect">断开连接</string>
    <string name="YC_Dolen_disconnecting">断开中...</string>
    <string name="yc_bind_state">绑定状态</string>
    <string name="YC_unbinddevice">找到的可用设备</string>
    <string name="YC_unfinddevice">未找到可用设备</string>
    <string name="not_open_ble">请先开启蓝牙</string>
    <string name="search_devicing">正在搜索设备...</string>
    <string name="details">详情</string>
    <string name="refresh">刷新</string>
    <string name="second_details">详情</string>
    <string name="no_motion_today"> 今天没有运动</string>
    <string name="the_movement_did_not_meet"> 今天运动未达标</string>
    <string name="assess_have_go">活动了</string>
    <string name="assess_have_burn">消耗了</string>
    <string name="total">共</string>
    <string name="step">步</string>
    <string name="fminute">分钟</string>
    <string name="needless_refresh_ui">无需更新</string>
    <string name="find_new_version_app">发现应用新版本，是否更新？</string>
    <string name="find_new_version_ble">发现手环新版本，是否更新？</string>
    <string name="find_new_ble_version_tip">发现手环新版本，请升级!</string>
    <string name="ble_updatting">手环更新中</string>
    <string name="ble_is_newest">手环已是最新版本。</string>
    <string name="frequent_access_server">请勿频繁访问服务器</string>
    <string name="server_is_busy">服务器忙，请稍后重试!</string>
    <string name="please_open_bluetooth">请打开蓝牙</string>
    <string name="sdcarderror">SDCard Exception</string>
    <string name="ble_updating">蓝牙正在升级...</string>
    <string name="ble_update_successful">固件升级完成</string>
    <string name="ble_fail_update">升级失败，请重新连接手环再升级...</string>
    <string name="download_fail">下载失败</string>
    <string name="YC_Dolen_update_warn">更新提示</string>
    <string name="YC_Dolen_find_new_version">发现新版本，是否更新？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="YC_Dolen_downloading">正在下载更新中，请查看通知栏！</string>
    <string name="confire_is_network_available">请确认网络是否可用!</string>
    <string name="power_pool">请在手环电量充足的情况下升级~</string>
    <string name="newest_version">已是最新版本</string>
    <string name="not_newest_version">发现新版本</string>
    <string name="get_ble_version_fails">获取版本失败</string>
    <string name="set_the_setting_ini_err">"The configuration file does not exist or is invalid!!"</string>
    <string name="select_file_is_not_img">"The selected file is not img file format, please choose again!!"</string>
    <string name="suota_update_succeed">"Upgrade has been successful!"</string>
    <string name="please_connect_bracelet">请连接手环</string>
    <string name="click_to_install">下载完成，点击安装</string>
    <string name="fail_download">下载失败</string>
    <string name="sedentary_remind">久坐提醒</string>
    <string name="unit">分钟</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="sync_rate">心率同步</string>
    <string name="rate_test_start">开始测试</string>
    <string name="rate_test_stop">停止测试</string>
    <string name="rate">心率:</string>
    <string name="lowest_rate">最低心率：</string>
    <string name="verage_rate">平均心率：</string>
    <string name="highest_rate">最高心率：</string>
    <string name="metric_system">公制</string>
    <string name="inch_system">英制</string>
    <string name="open_channel_ok">打开通道ok</string>
    <string name="close_channel_ok">关闭通道ok</string>
    <string name="test_channel">测试通道</string>
    <string name="channel_testting">测试通道中</string>
    <string name="test_channel_ok">测试通道ok</string>
    <string name="push_message_content">推送消息内容</string>
    <string name="tip">提示</string>
    <string name="set_password_for_band">请设置手环密码并牢记</string>
    <string name="input_password_for_band">	请输入手环密码</string>
    <string name="input_password_for_band_again">密码验证失败，请重新输入</string>
    <string name="sync_swim_finish">游泳数据同步完成</string>
    <string name="sync_swim">同步游泳数据</string>
    <string name="swim_stroke_count">划臂次数:</string>
    <string name="swim_time">游泳时间（秒）:</string>
    <string name="high_pressure">高压:</string>
    <string name="low_pressure">低压:</string>
    <string name="sync_pressure">同步血压</string>
    <string name="start_pressure">测血压</string>
    <string name="stop_pressure">停测血压</string>
    <string name="test_pressure_ok">血压测试完成</string>
    <string name="text_sure">"确定"</string>
    <string name="text_old_password">"旧密码"</string>
    <string name="hint_old_password">"请输入旧密码"</string>
    <string name="text_new_password">"新密码"</string>
    <string name="hint_password_limit">"请输入6~12位,不能全是数字"</string>
    <string name="text_password_confirm">"确认密码"</string>
    <string name="hint_password_confirm">"请再次输入新密码"</string>
    <string name="txt_complaints_tips1">投诉已提交</string>
    <string name="txt_complaints_tips2">低碳派团队会尽快核实，感谢您的支持。</string>
</resources>