<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.mylowcarbon.app.forget.password.ResetPasswordContract.View" />

        <variable
            name="view"
            type="View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/text_set_new_password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.mylowcarbon.app.login.PasswordView
            android:id="@+id/password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hint="@string/hint_input_new_password" />

        <com.mylowcarbon.app.login.PasswordView
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hint="@string/hint_confirm_new_password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_password_introduction" />

        <Button
            style="@style/LoginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/action_btn_bg"
            android:gravity="center"
            android:onClick="@{() -> view.commit()}"
            android:text="@string/text_save_new_password"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>