<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.mylowcarbon.app.register.password.PasswordContract.View" />

        <variable
            name="view"
            type="View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_your_phone_number"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <com.mylowcarbon.app.login.PasswordView
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:hint="@string/hint_input_login_password" />

        <com.mylowcarbon.app.login.PasswordView
            android:id="@+id/deal_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            app:hint="@string/hint_input_deal_password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_password_introduction" />

        <EditText
            android:id="@+id/recommend_code"
            style="@style/LoginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:hint="@string/hint_recommend_code"
            android:minHeight="40dp" />

        <Button
            style="@style/LoginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/action_btn_bg"
            android:gravity="center"
            android:onClick="@{() -> view.commit()}"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:text="@string/text_save"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>