<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.mylowcarbon.app.forget.question.QuestionFindPasswordContract.View" />

        <variable
            name="view"
            type="View" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="30dp"
        android:paddingStart="30dp">

        <EditText
            android:id="@+id/mobile"
            style="@style/LoginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_account"
            android:minHeight="40dp" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/account_bg"
            android:paddingEnd="@dimen/layout_height_10"
            android:paddingStart="@dimen/layout_height_10">

            <Spinner
                android:id="@+id/questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/layout_height_30" />
        </FrameLayout>


        <EditText
            android:id="@+id/answer"
            style="@style/LoginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_answer"
            android:minHeight="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_input_answer_tips" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_arrow"
            android:onClick="@{() -> view.findPasswordByAccount()}"
            android:text="@string/text_find_password_by_account" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/action_btn_bg"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="@{() -> view.verifyQuestion()}"
            android:text="@string/text_next"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_find_password_summary"
            android:textColor="@color/black" />

    </LinearLayout>

</layout>