<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.mylowcarbon.app.forget.account.AccountFindPasswordContract.View" />

        <variable
            name="view"
            type="View" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/text_input_account_find_password" />

        <EditText
            android:id="@+id/account"
            style="@style/LoginInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_account"
            android:inputType="numberDecimal"
            android:minHeight="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_arrow"
            android:onClick="@{() -> view.findPasswordByQuestion()}"
            android:text="@string/text_find_password_by_question"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/action_btn_bg"
            android:clickable="true"
            android:enabled="false"
            android:focusable="true"
            android:gravity="center"
            android:onClick="@{() -> view.sendVerifyCode()}"
            android:text="@string/text_next"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_find_password_summary"
            android:textColor="@color/black" />

    </LinearLayout>

</layout>