<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/action_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/layout_height_60">

            <TextView
                style="@style/BlackFontStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/layout_height_5"
                android:gravity="center"
                android:text="@string/txt_complaints_tips1"
                android:textColor="@color/text_black3"
                android:textStyle="normal" />

            <TextView
                style="@style/BlackFontStyle.Middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_height_15"
                android:drawablePadding="@dimen/layout_height_5"
                android:gravity="center"
                android:text="@string/txt_complaints_tips2"
                android:textColor="@color/text_black3"
                android:textSize="@dimen/txt_size_small"
                android:textStyle="normal" />
            <Button
                android:id="@+id/btn_exchange"
                style="@style/BlackFontStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_40"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/layout_height_30"
                android:layout_marginLeft="@dimen/layout_height_50"
                android:layout_marginRight="@dimen/layout_height_50"
                android:layout_marginTop="@dimen/layout_height_20"
                android:background="@drawable/bg_rect_rounded_orange3"
                android:onClick="close"
                android:text="@string/close"

                android:textColor="@color/white"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>



</layout>